components/Cards/cards.css
@import '/css/main.css';

/* main card component */
* {
    word-wrap: break-word;
    margin: 0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
    box-sizing: border-box;
}

/* body font size */
html {
    font-size: 90%;
}

.card {
    width: 28rem;
    /* height: 13rem; */
    background-color: rgb(240, 132, 132);
    border-radius: 0.2rem;
    height: auto;
    max-width: 100%;
}

.cimage {
    width: 12rem;
    height: 10rem;
    padding: 1rem;
}
.amount{
    font-size: 1.2rem;
    font-weight: bold;
}

.input-cart{
    height: 2rem;
    width: 2rem;
    border-radius: 0.3rem;
    text-align: center;
}
.button-cart,.button-like,.increase,.decrease{
    display: flex;
    align-items: center;
    justify-content: center;
    height: 2rem;
    width: fit-content;
    border-radius: 0.3rem;
    background-color: rgb(178, 68, 241);
    cursor: pointer;
    padding: 0.3rem;
    color: rgb(255, 251, 255);
}
.button-cart{
    /* height: 2rem;
    width: fit-content; */
}
.hcard-btn {
    display: flex;
    padding: 0.5rem;
}

.hcard-text {
    padding: 1rem 0 0 0;
}

.card-image {
    display: flex;
}

/* card textoverlay class */
.card-with-text-overlay {
    opacity: rgba(0, 0, 0, 0.5);
}

.text-overlay-over-card::after {
    height: auto;
    width: auto;
    /* display: flex; */
    /* align-items: center; */
    /* justify-content: center; */
    content: 'Out of Stock';
    background-image: linear-gradient(to right, #a7a6a6, rgb(255 255 255));
    font-weight: bold;
    font-size: 2rem;
    position: relative;
    top: -21rem;
    right: 1rem;
    color: red;
    opacity: 0.6;
}

/* other card classes */
.card-vertical,
.card-with-shadow {
    display: flex;
    flex-direction: column;
    margin: 0.5rem;
}
.input-cart{
    height: 2rem;
    width: 2rem;
    border-radius: 0.3rem;
    text-align: center;
}

/* vertical card class */
.vcard {
    height: auto;
    width: 16rem;
    max-width: 100%;
    border: 2px solid black;
    padding: 1rem;
    /* max-width: 100%;
    max-height: 100% */
}

/* shadow class */
.card-with-shadow {
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.btn-class-vcard {
    height: 2rem;
    margin: 0.3rem 0.3rem 0 0;
    display: flex;
    align-items: center;
    border-radius: 0.3rem;
    cursor: pointer;
    /* position: fixed; */
    /* display: block; */

}

.btn-icons-vcard {
    display: flex;
    align-items: center;
    justify-content: center;

}

.btn-add-to-vcart {
    display: flex;
    justify-content: space-around;
    align-items: center;
    height: 3rem;
    width: 11rem;
    max-width: 100%;
    margin: 0.2rem;
    border-radius: 0.4rem;
    color: purple;
    font-size: 1rem;
    background-color: antiquewhite;
}

.btn-add-to-vwishlist {
    display: flex;
    justify-content: space-around;
    align-items: center;
    height: 3rem;
    width: 4rem;
    max-width: 100%;
    margin: 0.2rem;
    border-radius: 0.4rem;
    color: purple;
    font-size: 1rem;
    background-color: antiquewhite;
}

.btn-icons {

    display: flex;
    align-items: center;
    justify-content: center;

}

.btn-add-to-hcart {
    display: flex;
    justify-content: space-around;
    align-items: center;
    height: 3rem;
    width: 8rem;
    max-width: 100%;
    margin: 0.2rem;
    border-radius: 0.4rem;
    color: purple;
    font-size: 1rem;
    background-color: antiquewhite;

}

.btn-add-to-hwishlist {

    display: flex;
    justify-content: space-around;
    align-items: center;
    height: 3rem;
    width: 4rem;
    max-width: 100%;
    margin: 0.2rem;
    border-radius: 0.4rem;
    color: purple;
    font-size: 1rem;
    background-color: antiquewhite;
}

.ratings-in-card {
    /* display: flex; */
    font-size: 1.2rem;
    cursor: pointer;

}

.checked {
    color: yellow;
}

.price {
    display: inline;
    font-size: 1.2rem;
    font-weight: bold;
    left: 5rem;

}

.item-rate {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.new-icon {
    height: 3rem;
    max-width: 100%;
    width: 3rem;
    border-radius: 50%;
    background-color: aquamarine;
    display: flex;
    justify-content: center;
    align-items: center;
    font-weight: bold;

}

